@@ -26,18 +26,16 @@
 class tx_oelib_Exception_EmptyQueryResult extends Exception {
 	/**
 	 * The constructor.
+	 *
+	 * @param int $code error code, must be >= 0
 	 */
-	public function __construct() {
-		$message = 'The database query returned an empty result, but should ' .
-			'have returned a non-empty result.';
+	public function __construct($code = 0) {
+		$message = 'The database query returned an empty result, but should  have returned a non-empty result.';
 
-		if ($GLOBALS['TYPO3_DB']->store_lastBuiltQuery
-			|| $GLOBALS['TYPO3_DB']->debugOutput
-		) {
-			$message .= LF . 'The last built query:' . LF .
-				$GLOBALS['TYPO3_DB']->debug_lastBuiltQuery;
+		if ($GLOBALS['TYPO3_DB']->store_lastBuiltQuery || $GLOBALS['TYPO3_DB']->debugOutput) {
+			$message .= LF . 'The last built query:' . LF . $GLOBALS['TYPO3_DB']->debug_lastBuiltQuery;
 		}
 
-		parent::__construct($message);
+		parent::__construct($message, $code);
 	}
 }
